@@ -146,7 +146,6 @@ public class ArtDatabaseController {
 				//org.hsqldb.jdbcDriver is for hsqldb 1.x, org.hsqldb.jdbc.JDBCDriver for hsqldb 2.x
 				//http://www.hsqldb.org/doc/1.8/src/org/hsqldb/jdbcDriver.html
 				//http://hsqldb.org/doc/src/org/hsqldb/jdbc/JDBCDriver.html
-				//need to use class.forName() in a web app if you'll use DriverManager
 				//https://stackoverflow.com/questions/1911253/the-infamous-java-sql-sqlexception-no-suitable-driver-found
 				//https://tomcat.apache.org/tomcat-8.0-doc/jndi-datasource-examples-howto.html#DriverManager,_the_service_provider_mechanism_and_memory_leaks
 				//https://stackoverflow.com/questions/5556664/how-to-fix-no-suitable-driver-found-for-jdbcmysql-localhost-dbname-error-w?noredirect=1&lq=1
@@ -178,8 +177,7 @@ public class ArtDatabaseController {
 			if (artDatabase.isJndi()) {
 				conn = ArtUtils.getJndiConnection(url);
 			} else {
-				//for jdbc 4 drivers, you don't have to specify driver or use class.forName()
-				//https://stackoverflow.com/questions/5484227/jdbc-class-forname-vs-drivermanager-registerdriver
+				//https://stackoverflow.com/questions/28119328/why-do-i-need-to-call-class-forname-in-tomcat-web-application-even-if-i-use-a-jd
 				if (StringUtils.isNotBlank(driver)) {
 					Class.forName(driver).newInstance();
 				}
