@@ -1,0 +1,26 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<databaseChangeLog
+	xmlns="http://www.liquibase.org/xml/ns/dbchangelog"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns:ext="http://www.liquibase.org/xml/ns/dbchangelog-ext"
+	xsi:schemaLocation="http://www.liquibase.org/xml/ns/dbchangelog http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd
+    http://www.liquibase.org/xml/ns/dbchangelog-ext http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-ext.xsd">
+
+	<changeSet id="1" author="art">
+		<update tableName="ART_DATABASE_VERSION">
+			<column name="DATABASE_VERSION" value="5.6"/>
+		</update>
+	</changeSet>
+	<changeSet id="2" author="art">
+		<update tableName="ART_DATABASES">
+			<column name="DRIVER" value="com.mysql.cj.jdbc.Driver"/>
+			<where>DRIVER='com.mysql.jdbc.Driver'</where>
+		</update>
+	</changeSet>
+	<changeSet id="3" author="art">
+		<update tableName="ART_SETTINGS">
+			<column name="DB_AUTHENTICATION_DRIVER" value="com.mysql.cj.jdbc.Driver"/>
+			<where>DB_AUTHENTICATION_DRIVER='com.mysql.jdbc.Driver'</where>
+		</update>
+	</changeSet>
+</databaseChangeLog>
