@@ -4,7 +4,7 @@
     <DataSourceName>Provider=mondrian;DataSource=FoodMart</DataSourceName>
     <DataSourceDescription>Mondrian FoodMart Database</DataSourceDescription>
     <URL>http://localhost:8080/art/xmla</URL>
-    <DataSourceInfo>Provider=mondrian;Jdbc=jdbc:mysql://localhost/foodmart;JdbcUser=auser;JdbcPassword=apassword;JdbcDrivers=com.mysql.jdbc.Driver</DataSourceInfo>
+    <DataSourceInfo>Provider=mondrian;Jdbc=jdbc:mysql://localhost/foodmart;JdbcUser=auser;JdbcPassword=apassword;JdbcDrivers=com.mysql.cj.jdbc.Driver</DataSourceInfo>
     <ProviderName>Mondrian</ProviderName>
     <ProviderType>MDP</ProviderType>
     <AuthenticationMode>Unauthenticated</AuthenticationMode>
