@@ -1,5 +1,6 @@
 ART 5.6
 * Added jasperreports-functions jar
+* Updated mysql driver to version 8
 
 ART 5.5
 * Added Time parameter type
